--- a/todo.txt
+++ b/todo.txt
@@ -17,4 +17,4 @@
 - [Partially SOLVED] ctune: scroll beyond band edges.
 - when moving vfo by touching on the screen, snap on to a frequency that is a multiple of step size.
 - touching on the vfo freq (or A or B), switches the active VFO.
-
+- switching from ctune to non-ctune should center the frequency to the last ctune frequency.
